feat: :card_file_box: add timestamp column in database
